# rangecrawler

./: .dockerignore  .env.example  .gitignore  .prettierignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  GEMINI.md  QUICKSTART.md  README.md  REMOTE_SETUP.md  TODO.md  client_example.py  client_request_ollama.py  config.example.yaml  config.yaml  docker-compose.yml  pyproject.toml  quick-gude.md  refactor_TODO.md  requirements-dev.txt  requirements.txt  submit_command.py  targets.yml  test_rangecrawler.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PR_TEMPLATE/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: bugfix_pr.md  docs_pr.md  feature_pr.md
.github/workflows/: branch-name-check.yml  ci.yml
docs/: REQUIREMENTS.md  cli-reference.md  setup-guide.md  usage-tutorial.md
examples/: client_example.py  submit_command.py
install/: install_broker.sh  install_client.sh  install_worker.sh
scripts/: local_ci.sh
src/: lib.rs  main.py  main.rs
src/agent/: headless_client.py
src/broker/: config.py  main.py  manager.py  models.py  server.py
src/broker/db/: database.py
src/broker/routers/: __init__.py  admin.py  chat.py  commands.py  system.py
src/broker/services/: agent.py  tools.py  tunnel.py
src/client/: cli.py
src/client/commands/: chat.py  provision.py  status.py
src/dashboard/: app.py
src/worker/: main.py  shield_proxy.py
tests/: test_broker.py  test_database.py  test_manager.py  test_models.py  test_rangecrawler.py  test_server.py
tests/mock_env/: Dockerfile  mock_llm.py  test_config.yaml
(+3 files in other folders)
