[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.57", features = ["derive"] }
derive = "1.0.0"
log = "0.4.29"
russh = "0.57.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
shell-escape = "0.1.5"
tokio = { version = "1.49.0", features = ["full", "io-std"] }
which = "8.0.0"
